Tue Feb 16 18:54:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* init.c (shutdown_terminal): Revoke access to the terminal from
	existing programs.

1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>

	* init.c (main): Don't bogusly clear bootstrap_args.
	Reported by OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>.

Tue May 12 12:03:38 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* init.c (setup_terminal): Free LINE after done using it.
	(process_rc_script): Likewise free RCARGS.
	Both reported by Katusya Tanaka (wyvern@pb3.so-net.ne.jp).

1997-06-30  Miles Bader  <miles@gnu.ai.mit.edu>

	* init.c (bootstrap_args): Initialize to 0.
	(parse_opt): New function.
	(options, doc): New variables.
	(main): Parse args using argp.
	Include <argp.h>.

Thu Sep 12 16:32:31 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(init): Delete special target.

	* Makefile (mung_msg_S.h): Put rule *after* inclusion of Makeconf.

Thu Sep  5 11:12:32 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* init.c: Include <version.h>.
	(init_version): Delete variable.
	(launch_core_servers): Pass empty string as release; HURD_VERSION
	as version.

Tue Aug 13 17:51:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (init): Remove -lutil.
	(libutil-libsubst): Variable removed.
	(LDLIBS): New variable.

Mon Aug 12 11:12:22 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* init.c (setup_terminal): Declare LINE.
	(add_terminal): Don't declare LINE.

Thu Aug  8 16:34:06 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* init.c (setup_terminal): New function.
	(add_terminal): Use setup_terminal.
	(reread_ttys): When turning an existent terminal spec on, call
	setup_terminal before startup_terminal.

	* init.c (struct terminal): New member `read'.
	(shutdown_terminal): New function.
	(reread_ttys): Use shutdown_terminal instead of doing it by hand.
	Keep track of which ttys we used to know about are no longer in